Added new apis
