# src/controllers/innings_controller.go
@@ -98,3 +98,87 @@ func (controller InningsController) StartInnings(c *gin.Context) {
 
 	c.JSON(http.StatusNoContent, nil)
 }
+
+//StartNewOver godoc
+// @Summary Created an innings
+// @Tags Innings
+// @Accept  json
+// @Produce json
+// @Param model body requestmodels.StartInningsModel true "Start Innings Model"
+// @Param id path string true "Series ID" string
+// @Param matchid path string true "Match ID" string
+// @Param inningsid path string true "Innings ID" string
+// @Success 204 {object} gin.H
+// @Failure 400 {object} responsemodels.ErrorModel
+// @Failure 404 {object} responsemodels.ErrorModel
+// @Router /innings/:inningsid/over [post]
+func (controller InningsController) StartNewOver(c *gin.Context) {
+	var (
+		ctx    context.Context
+		cancel context.CancelFunc
+	)
+
+	ctx, cancel = context.WithCancel(context.Background())
+	defer cancel()
+
+	inningsid := c.Param("inningsid")
+	var request, err = validators.ValidateCreateOverModel(c)
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, responsemodels.ErrorModel{
+			ErrorCode: http.StatusBadRequest,
+			Message:   err.Error(),
+		})
+		return
+	}
+
+	id, errModel := controller.InningsService.StartNewOver(ctx, inningsid, request)
+	if errModel != (responsemodels.ErrorModel{}) {
+		c.JSON(errModel.ErrorCode, errModel)
+		return
+	}
+
+	c.JSON(http.StatusCreated, gin.H{"updateUrl": "/innings/:inningsid/over/" + id})
+}
+
+//AddNextBatsman godoc
+// @Summary Add a new batsman in the crease
+// @Tags Innings
+// @Accept  json
+// @Produce json
+// @Param model body requestmodels.NextBatsmanModel true "Next Batsman Model"
+// @Param id path string true "Series ID" string
+// @Param matchid path string true "Match ID" string
+// @Param inningsid path string true "Innings ID" string
+// @Success 204 {object} gin.H
+// @Failure 400 {object} responsemodels.ErrorModel
+// @Failure 404 {object} responsemodels.ErrorModel
+// @Router /innings/:inningsid/batsman [put]
+func (controller InningsController) AddNextBatsman(c *gin.Context) {
+	var (
+		ctx    context.Context
+		cancel context.CancelFunc
+	)
+
+	ctx, cancel = context.WithCancel(context.Background())
+	defer cancel()
+
+	inningsid := c.Param("inningsid")
+	var request, err = validators.ValidateNextBatsmanModel(c)
+
+	if err != nil {
+		c.JSON(http.StatusBadRequest, responsemodels.ErrorModel{
+			ErrorCode: http.StatusBadRequest,
+			Message:   err.Error(),
+		})
+		return
+	}
+
+	errModel := controller.InningsService.AddNextBatsman(ctx, inningsid, request)
+	if errModel != (responsemodels.ErrorModel{}) {
+		c.JSON(errModel.ErrorCode, errModel)
+		return
+	}
+
+	c.JSON(http.StatusNoContent, nil)
+}
